--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
     "matplotlib": "^1.0.0",
+    "number-to-words": "^1.2.4",
     "prompt": "^1.2.0",
     "rubiks-cube-scramble": "^1.0.2",
     "tnoodle": "0.0.2"
