--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonlines": "^0.1.1",
     "matplotlib": "^1.0.0",
     "number-to-words": "^1.2.4",
+    "pdfkit": "^0.13.0",
     "prompt": "^1.2.0",
     "rubiks-cube-scramble": "^1.0.2",
     "tnoodle": "0.0.2"
